# ScanCodex

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
src/scancodex/: parser.py  server.py
