[project]
name = "scancodex"
version = "0.1.0"
description = "MCP Server — Security scanner advisor powered by Scanners-Box"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "security", "scanner", "cybersecurity", "claude"]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
scancodex = "scancodex.server:main"

[project.urls]
Homepage = "https://github.com/We5ter/Scanners-Box"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scancodex"]
